change version bg color

--- a/public/styles.css
+++ b/public/styles.css
@@ -39,7 +39,7 @@ body {
 }
 
 .version {
-    background-color: #ff00ff;
+    background-color: #f794f1;
     color: white;
     padding: 0.25rem 0.5rem;
     font-size: 2rem;
