--- a/bundle.css
+++ b/bundle.css
@@ -170,7 +170,7 @@ pre > code {
 
 /* Tables */
 table {
-  text-align: justify;
+  text-align: left-align;
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 2rem;
