--- a/public/_includes/default-layout.njk
+++ b/public/_includes/default-layout.njk
@@ -1,5 +1,5 @@
 ---
-title: MEGHNA AND KSHITIJ GETTING MARRIED WAHOOOOO WE DID IT we did it wow
+title: MEGHNA AND KSHITIJ GETTING MARRIED WAHOOO WE'RE DOING IT!! wow
 ---
 
 <!doctype html>
