--- a/public/india.css
+++ b/public/india.css
@@ -78,7 +78,7 @@
 
 
   
-  --color-accent: #121212;
+  --color-accent: #1a0f0f;
   --color-text: #250606;
   --color-body-text: #1f1818;
   --color-heading: #bf172a;
@@ -312,11 +312,12 @@ a:hover {
 }
 
 .day-container {
-  margin-bottom: 3rem;
+  margin-bottom: 7rem;
 }
 
 .day-container:last-child {
   border-bottom: none;
+  margin-bottom: 9rem;
 }
 
 .day-header {
@@ -337,7 +338,7 @@ a:hover {
 }
 
 .event-name {
-  font-size: 2rem;
+  font-size: 3rem;
   color: var(--color-text);
   margin-bottom: 0.5rem;
   margin-top: 0;
@@ -353,7 +354,7 @@ a:hover {
 .event-description {
   font-size: 1.8rem;
   line-height: 1.7;
-  margin-bottom: 0;
+  margin-bottom: 3rem;
   /* text-align: left; */
   
 }
@@ -403,17 +404,21 @@ a:hover {
 /* Marigolds Banner */
 .marigolds-banner {
   width: 100%;
-  height: 15rem;
+  height: 18rem;
   background-image: url('/marigolds3.png');
   background-repeat: repeat-x;
   background-position: top center;
   background-size: auto 100%;
+  border-top: 3px solid #bf172a
 }
 
 /* Mobile: smaller banner */
 @media (max-width: 768px) {
   .marigolds-banner {
     height: 10rem;
+  }
+  .logo{
+    font-size: 24px;
   }
 }
 
