--- a/public/india.css
+++ b/public/india.css
@@ -420,6 +420,20 @@ a:hover {
   .logo{
     font-size: 24px;
   }
+  .event-name {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 2.4rem
+}
+.event-description {
+  font-size: 1.6rem
+}
+.event-timing, .dress-code-description {
+  font-size:1.3rem;
+}
+
 }
 
 
